force-app/main/default/objects/LegalEntity__c/LegalEntity__c.object-meta.xml
<CustomObject>
    <label>Legal Entity</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Legal Entities</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>