force-app/main/default/objects/LegalEntity__c/fields/AccountsEmail__c.field-meta.xml
<CustomField>
    <fullName>AccountsEmail__c</fullName>
    <label>Accounts Email</label>
    <type>Email</type>
</CustomField>