force-app/main/default/objects/LegalEntity__c/fields/AddressFull__c.field-meta.xml
<CustomField>
    <fullName>AddressFull__c</fullName>
    <formula>AddressStreetLineSingle__c + &apos;, &apos; + Address__City__s + &apos;, &apos; + Address__PostalCode__s</formula>
    <label>Address Full</label>
    <type>Text</type>
</CustomField>