force-app/main/default/objects/LegalEntity__c/fields/AddressStreetLineSingle__c.field-meta.xml
<CustomField>
    <fullName>AddressStreetLineSingle__c</fullName>
    <formula>SUBSTITUTE(Address__Street__s, MID($Setup.LineBreak__c.Value__c, 2, 2), &apos;, &apos;)</formula>
    <label>Address Street Line Single</label>
    <type>Text</type>
</CustomField>