force-app/main/default/objects/LegalEntity__c/fields/BankSortCode__c.field-meta.xml
<CustomField>
    <fullName>BankSortCode__c</fullName>
    <label>Bank Sort Code</label>
    <length>6</length>
    <type>Text</type>
</CustomField>