force-app/main/default/objects/LegalEntity__c/fields/InvoiceSenderEmail__c.field-meta.xml
<CustomField>
    <fullName>InvoiceSenderEmail__c</fullName>
    <label>Invoice Sender Email</label>
    <required>true</required>
    <type>Email</type>
</CustomField>