force-app/main/default/objects/LegalEntity__c/fields/InvoiceSenderName__c.field-meta.xml
<CustomField>
    <fullName>InvoiceSenderName__c</fullName>
    <label>Invoice Sender Name</label>
    <length>100</length>
    <required>true</required>
    <type>Text</type>
</CustomField>