force-app/main/default/objects/LegalEntity__c/fields/RegistrationNumber__c.field-meta.xml
<CustomField>
    <fullName>RegistrationNumber__c</fullName>
    <label>Registration Number</label>
    <length>8</length>
    <type>Text</type>
</CustomField>