force-app/main/default/objects/LegalEntity__c/fields/TermsOfService__c.field-meta.xml
<CustomField>
    <fullName>TermsOfService__c</fullName>
    <label>Terms of Service</label>
    <length>255</length>
    <type>Text</type>
</CustomField>