force-app/main/default/objects/LegalEntity__c/fields/VatNumber__c.field-meta.xml
<CustomField>
    <fullName>VatNumber__c</fullName>
    <label>VAT Number</label>
    <length>11</length>
    <type>Text</type>
</CustomField>