force-app/main/default/objects/LegalEntity__c/validationRules/RestrictBankAccountNumber.validationRule-meta.xml
<ValidationRule>
    <fullName>RestrictBankAccountNumber</fullName>
    <active>true</active>
    <errorConditionFormula>AND(OR(ISNEW(), ISCHANGED(BankAccountNumber__c)), NOT(REGEX(BankAccountNumber__c, &apos;^\\d{8}$&apos;)))</errorConditionFormula>
    <errorDisplayField>BankAccountNumber__c</errorDisplayField>
    <errorMessage>Bank Account Number must be 8 digits.</errorMessage>
</ValidationRule>