force-app/main/default/objects/LegalEntity__c/validationRules/RestrictBankSortCode.validationRule-meta.xml
<ValidationRule>
    <fullName>RestrictBankSortCode</fullName>
    <active>true</active>
    <errorConditionFormula>AND(OR(ISNEW(), ISCHANGED(BankSortCode__c)), NOT(REGEX(BankSortCode__c, &apos;^\\d{6}$&apos;)))</errorConditionFormula>
    <errorDisplayField>BankSortCode__c</errorDisplayField>
    <errorMessage>Bank Sort Code must be 6 digits.</errorMessage>
</ValidationRule>