force-app/main/default/objects/LegalEntity__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>RegistrationNumber__c</columns>
    <columns>VatNumber__c</columns>
    <columns>Email__c</columns>
    <columns>Phone__c</columns>
    <columns>BankAccountNumber__c</columns>
    <columns>BankSortCode__c</columns>
    <columns>Address__Street__s</columns>
    <columns>Address__City__s</columns>
    <columns>Address__PostalCode__s</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>